# falkordb-bolt-rs

./: Cargo.toml
.github/workflows/: ci.yml
docs/: DESIGN.md
src/: lib.rs
src/ffi/: c_api.rs
src/packstream/: deserialize.rs  marker.rs  mod.rs  serialize.rs  types.rs
src/protocol/: chunking.rs  handshake.rs  message.rs  mod.rs  state.rs
src/server/: connection.rs  event_loop.rs  handler.rs  mod.rs
src/transport/: mod.rs  tcp.rs  tls.rs  websocket.rs
